delete null used code & reids & cache(tmp test)