@@ -1,9 +1,10 @@
 package com.zoctan.api.util;
 
 
-import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.codec.binary.Base64;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Component;
-import sun.misc.BASE64Decoder;
 
 import javax.crypto.Cipher;
 import java.io.DataInputStream;
@@ -13,13 +14,31 @@ import java.security.*;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
 
-/**
- * RSA 工具类
+/*
+用openssl生成512位RSA：
+生成私钥：
+openssl genrsa -out key.pem 512
+从私钥中导出公钥：
+openssl rsa -in key.pem -pubout -out public-key.pem
+公钥加密：
+openssl rsautl -encrypt -in xx.file -inkey public-key.pem -pubin -out xx.en
+私钥解密：
+openssl rsautl -decrypt -in xx.en -inkey key.pem -out xx.de
+要在Java内调用还要进行pkcs8编码：
+openssl pkcs8 -topk8 -inform PEM -in key.pem -outform PEM -out private-key.pem -nocrypt
+最后将公私玥放在/resources/rsa/：private-key.pem public-key.pem
  */
-@Slf4j
+
+/**
+ * RSA 工具
+ *
+ * @author Zoctan
+ * @date 2018/06/09
+ */
 @Component
 public class RSAUtil {
-    private final String RESOURCES_PATH = System.getProperty("user.dir") + "/src/main/resources/rsa/";
+    private final static Logger log = LoggerFactory.getLogger(RSAUtil.class);
+
     private final String algorithm = "RSA";
 
     /**
@@ -66,7 +85,7 @@ public class RSAUtil {
     }
 
     private byte[] replaceAndBase64Decode(final String file, final String headReplace, final String tailReplace) throws Exception {
-        final File f = new File(this.RESOURCES_PATH + file);
+        final File f = new File(file);
         final FileInputStream fis = new FileInputStream(f);
         final DataInputStream dis = new DataInputStream(fis);
         final byte[] keyBytes = new byte[(int) f.length()];
@@ -77,9 +96,7 @@ public class RSAUtil {
         String publicKeyPEM = temp.replace(headReplace, "");
         publicKeyPEM = publicKeyPEM.replace(tailReplace, "");
 
-
-        final BASE64Decoder b64 = new BASE64Decoder();
-        return b64.decodeBuffer(publicKeyPEM);
+        return Base64.decodeBase64(publicKeyPEM);
     }
 
     /**
@@ -93,8 +110,8 @@ public class RSAUtil {
             final byte[] decoded = this.replaceAndBase64Decode(
                     pem,
                     "-----BEGIN PUBLIC KEY-----\n",
-                    "-----END PUBLIC KEY-----");
-
+                    "-----END PUBLIC KEY-----"
+            );
             final X509EncodedKeySpec spec = new X509EncodedKeySpec(decoded);
             final KeyFactory keyFactory = KeyFactory.getInstance(this.algorithm);
             return keyFactory.generatePublic(spec);
@@ -115,8 +132,8 @@ public class RSAUtil {
             final byte[] decoded = this.replaceAndBase64Decode(
                     pem,
                     "-----BEGIN PRIVATE KEY-----\n",
-                    "-----END PRIVATE KEY-----");
-
+                    "-----END PRIVATE KEY-----"
+            );
             final PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(decoded);
             final KeyFactory keyFactory = KeyFactory.getInstance(this.algorithm);
             return keyFactory.generatePrivate(spec);
@@ -126,17 +143,3 @@ public class RSAUtil {
         }
     }
 }
-/*
-用openssl生成512位RSA：
-生成私钥：
-openssl genrsa -out key.pem 512
-从私钥中导出公钥：
-openssl rsa -in key.pem -pubout -out public-key.pem
-公钥加密：
-openssl rsautl -encrypt -in xx.file -inkey public-key.pem -pubin -out xx.en
-私钥解密：
-openssl rsautl -decrypt -in xx.en -inkey key.pem -out xx.de
-要在Java内调用还要进行pkcs8编码：
-openssl pkcs8 -topk8 -inform PEM -in key.pem -outform PEM -out private-key.pem -nocrypt
-最后将公私玥放在/resources/rsa/：private-key.pem public-key.pem
- */
